fixed scrolling overflow

--- a/css/style.css
+++ b/css/style.css
@@ -5,12 +5,6 @@
 html {
   scroll-behavior: smooth;
 }
-main.container {
-  margin-top: 20vh;
-  display: flex;
-  width: 100%;
-  height: auto;
-}
 button.menu {
   display: none;
 }
@@ -141,12 +135,11 @@ li a.btn {
 form.form {
   background-color: var(--light-grey);
   margin-bottom: 15vh;
-  margin-top: 0vh;
+  margin-top: 20vh;
 }
 @media only screen and (max-width: 535px) {
   form.form {
     padding: 1rem;
-    margin: 1rem;
   }
 }
 input[type="search"]::-webkit-search-cancel-button {
@@ -167,35 +160,31 @@ input[type="search"]:focus::-webkit-search-cancel-button {
   pointer-events: all;
 }
 
-main {
-  height: 100vh;
-}
 .sidebar {
-  margin-top: 2vh;
-  padding-bottom: 12vh;
+  margin-top: 20vh;
   flex: 3;
-  margin: 2rem;
-  margin-top: 0;
-  height: 100vh;
+  padding-left: 1em;
+  height: 100%;
   flex-wrap: nowrap;
   overflow: hidden;
   overflow-y: scroll;
-  padding-bottom: 25vh;
-
+  padding-bottom: 22vh;
   border-right: 2px solid var(--primary-color);
 }
 .sidebar .col {
   padding: 0.5rem;
 }
-section.products {
+.products {
   flex: 12;
-  height: 100vh;
+  padding-top: 20vh;
+  height: 100%;
+  padding-bottom: 2vh;
   overflow: hidden;
   overflow-y: scroll;
   padding-left: 2%;
-  padding-bottom: 25vh;
 }
 .filter-btn {
+  z-index: 99;
   display: none;
 }
 @media only screen and (max-width: 950px) {
@@ -211,12 +200,12 @@ section.products {
   }
   .sidebar {
     flex: auto;
-    z-index: 999;
+    z-index: 4;
     display: none;
     background-color: var(--dark-color-1);
     backdrop-filter: var(--blur-5);
     position: absolute;
-    top: 32vh;
+    top: 30vh;
     margin: 0;
     padding: 1rem;
     width: 100%;
@@ -256,7 +245,7 @@ section.products {
   background-color: var(--dark-black);
 }
 hr {
-  background-color: var(--light-color-1);
+  background-color: var(--light-color-8);
 }
 .card-horizontal {
   max-height: 35vh;
@@ -295,12 +284,7 @@ hr {
     height: min-content;
   }
 }
-.cart-section {
-  width: 100%;
-  height: 100vh;
-  overflow: hidden;
-  overflow-y: scroll;
-}
+
 @media only screen and (max-width: 565px) {
   .cart-price-details,
   .cart-products {
@@ -313,9 +297,7 @@ hr {
 }
 .cart-products {
   width: 35rem;
-  margin-bottom: 35vh;
-  overflow: hidden;
-  overflow-y: scroll;
+  padding-bottom: 5vh;
 }
 .apply-btn {
   padding: 0.75rem 1rem;
@@ -351,14 +333,14 @@ hr {
     max-height: 13rem;
   }
 }
+.cart-wrapper {
+  padding-top: 20vh;
+  height: 100vh;
+  overflow: hidden;
+  overflow-y: scroll;
+}
+/* WishList Page */
 .wishlist-wrapper {
   top: 20vh;
   position: relative;
-}
-.wishlist-section {
-  width: 100%;
-  overflow: hidden;
-  overflow-y: scroll;
-  height: 120vh;
-  padding-bottom: 50vh;
 }
